--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hitsthai",
-  "homepage": "http://localhost:3001",
-  "proxy": "http://localhost:3000",
+  "homepage": "http://localhost:3000",
+  "proxy": "http://localhost:3001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5"
   }
 }
