--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "antd": "^4.9.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-floating-button-menu": "^2.1.1",
     "react-icons": "^4.1.0",
     "react-image-gallery": "^1.0.8",
+    "react-lineicons": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "styled-components": "^5.2.1",
     "sweetalert": "^2.1.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
