--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "private": true,
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "disable-scroll": "^0.6.0",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-burger-menu": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-floating-button-menu": "^2.1.1",
     "react-icons": "^4.1.0",
@@ -22,6 +25,7 @@
     "react-lineicons": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-sidebar": "^3.0.2",
     "styled-components": "^5.2.1",
     "sweetalert": "^2.1.2",
     "universal-cookie": "^4.0.4",
