--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.1.0",
     "react-image-gallery": "^1.0.8",
     "react-lineicons": "^2.2.0",
+    "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1",
