--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
+    "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,6 +20,7 @@
     "react-bootstrap": "^1.4.0",
     "react-burger-menu": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-emotion": "^10.0.0",
     "react-floating-button-menu": "^2.1.1",
     "react-icons": "^4.1.0",
     "react-image-gallery": "^1.0.8",
