--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-player": "^2.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-show-more": "^2.0.0",
     "react-sidebar": "^3.0.2",
     "styled-components": "^5.2.1",
     "sweetalert": "^2.1.2",
